# vidzy

./: Cargo.toml  LICENSE  README.md  build.rs  mpv-cmds.txt  mpv-options.txt  mpv-props.txt  player.conf
ffmpeg-the-third/ffmpeg-sys-the-third/: Cargo.toml  build.rs
install/: deps.txt
scene/: player.slint
scene/widgets/: stark-ui.slint
src/: main.rs
src/feeder/: feeder.rs  mod.rs
src/helpers/: fsys.rs  mod.rs  rng.rs
src/input/: managed_input.rs  mod.rs
src/player/: audio.rs  clock.rs  ffmpeg_player.rs  funcs.rs  mod.rs  mpv_player.rs  options.rs  rescale.rs  video.rs
src/scene/: funcs.rs  mod.rs
src/shaders/: fragment.glsl  vertex.glsl
